[gd_scene load_steps=23 format=3 uid="uid://ctb15xi4s3orl"]

[ext_resource type="Texture2D" uid="uid://bahffd5vu4bjv" path="res://assets/Sunny-land-assets-files/PNG/spritesheets/enemy-deadth.png" id="1_jmv5y"]
[ext_resource type="Script" path="res://script/frog.gd" id="1_oadk2"]
[ext_resource type="Texture2D" uid="uid://da5awj2gickkr" path="res://assets/Sunny-land-assets-files/PNG/spritesheets/frog-idle.png" id="2_2hmjd"]
[ext_resource type="Texture2D" uid="uid://cexscphcth672" path="res://assets/Sunny-land-assets-files/PNG/spritesheets/frog-jump.png" id="3_n66ij"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lu6o7"]
atlas = ExtResource("1_jmv5y")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_5h61u"]
atlas = ExtResource("1_jmv5y")
region = Rect2(40, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqi2q"]
atlas = ExtResource("1_jmv5y")
region = Rect2(80, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_6o4ip"]
atlas = ExtResource("1_jmv5y")
region = Rect2(120, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1588"]
atlas = ExtResource("1_jmv5y")
region = Rect2(160, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_spiu3"]
atlas = ExtResource("1_jmv5y")
region = Rect2(200, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrch8"]
atlas = ExtResource("2_2hmjd")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uj56"]
atlas = ExtResource("2_2hmjd")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7kml"]
atlas = ExtResource("2_2hmjd")
region = Rect2(70, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qprkt"]
atlas = ExtResource("2_2hmjd")
region = Rect2(105, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d80me"]
atlas = ExtResource("3_n66ij")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyy3s"]
atlas = ExtResource("3_n66ij")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5aj5k"]
atlas = ExtResource("3_n66ij")
region = Rect2(70, 0, 35, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vhsln"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu6o7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5h61u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqi2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6o4ip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1588")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_spiu3")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrch8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uj56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7kml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qprkt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrch8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrch8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrch8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrch8")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d80me")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyy3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5aj5k")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lp4dq"]
size = Vector2(20, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_nkyjc"]
radius = 171.012

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y5k0i"]
size = Vector2(18, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_doutl"]
size = Vector2(22, 14)

[node name="Frog" type="CharacterBody2D"]
script = ExtResource("1_oadk2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vhsln")
animation = &"idle"
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_lp4dq")
metadata/_edit_lock_ = true

[node name="PlayerDetection" type="Area2D" parent="."]
visible = false
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_nkyjc")
metadata/_edit_lock_ = true

[node name="FrogDeath" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FrogDeath"]
shape = SubResource("RectangleShape2D_y5k0i")

[node name="FrogDamage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FrogDamage"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_doutl")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="FrogDeath" to="." method="_on_frog_death_body_entered"]
[connection signal="body_entered" from="FrogDamage" to="." method="_on_frog_damage_body_entered"]
